# koHelp

./: README.md  kohelp.py  pyproject.toml
json/: kisa_terms_ko.json  security_terms_en_ko.json  tta_terms_en_ko_clean.json
scripts/: build_security_glossary.py  crawl_kisa.py  inspect_nist.py
